# Hello_game

./: CMakeLists.txt  Hello_game.sln  README.md
Hello_game/: CMakeLists.txt  Entity.cpp  Hello_game.vcxproj  Hello_game.vcxproj.filters  NodeGame.cpp  NodeGame.h  Player.cpp  README.md  TileMap.cpp  config.h  main.cpp
Hello_game/Entities/: Animation.cpp  Animation.h  Entity.cpp  Entity.h
Hello_game/Entities/Bots/Bee/: Bee.cpp  Bee.h
Hello_game/Entities/Bots/Mushroom/: Mushroom.cpp  Mushroom.h  MushroomBlue.cpp  MushroomBlue.h  MushroomRed.cpp  MushroomRed.h
Hello_game/Entities/Bots/Snake/: Snake.cpp  Snake.h
Hello_game/Entities/Bullets/: Bullets.h
Hello_game/Entities/Hero/: Player.cpp  Player.h
Hello_game/Entities/Solid/: Solid.h
Hello_game/Entities/Traps/Needle/: Needle.cpp  Needle.h
Hello_game/Header/: Animation.h  Bullets.h  Enemy.h  Entity.h  Menu.h  NodeGame.h  Player.h  Solid.h  TileMap.h  config.h
Hello_game/Menu/: Menu.cpp  Menu.h
Hello_game/NodeGame/: NodeGame.cpp  NodeGame.h  initializing menu.cpp  initializing_menu.cpp
Hello_game/Resource/Images/: lvl1.tmx
Hello_game/Resource/Levels/: lvl1.tmx  lvl1.xml  lvl2.tmx  lvl3_test.tmx  mario.tsx
Hello_game/Source/: Animation.cpp  Enemy.cpp  Entity.cpp  Menu.cpp  NodeGame.cpp  Player.cpp  TileMap.cpp  main.cpp
Hello_game/TileMap/: TileMap.cpp  TileMap.h
SFML Game Development (Book)/: SFML Game Development (Book).vcxproj  SFML Game Development (Book).vcxproj.filters  categories.h  config.h  main.cpp
SFML Game Development (Book)/Entities/: Entity.cpp  Entity.h
SFML Game Development (Book)/Entities/Aircraft/: Aircraft.cpp  Aircraft.h
SFML Game Development (Book)/include/Flag/: Flag.h  Flag.inl
SFML Game Development (Book)/tools/: Command.h  CommandQueue.h  Game.cpp  Game.h  Player.h  World.cpp  World.h  player.cpp
SFML Game Development (Book)/tools/ResourceHolder/: ResourceHolder.h  ResourceHolder.inl
SFML Game Development (Book)/tools/SceneNode/: SceneNode.cpp  SceneNode.h
SFML Game Development (Book)/tools/SpriteNode/: SpriteNode.cpp  SpriteNode.h
